# midbrain_parkinsons

./: .gitignore  CITATAION.cff  CITATION.cff  Data_Summary.ipynb  README.md  old_pyproject.toml  pyproject.toml  setup.py
.devcontainer/: curate_data.py  devcontainer.json  environment.yml  post_create.sh
Ari/: CV_Mapping.ipynb  Eigenvector_Directionality-Copy1.ipynb  (+1 more)
docs/: conf.py
src/human_hip/: __init__.py  data_summary.ipynb  functional_connectivity.ipynb  pyproject.toml  stitched_data.pkl
src/human_hip/animate/: __init__.py  animate_firing_rate.py  animate_latency_pairs.py  animate_raw_waves.py
src/human_hip/basics/: __init__.py  analysis.py  basics.py  basics_source_code.ipynb  basics_test.ipynb  load_data.py  matt_module.py  plots.py
src/human_hip/curate_data/: curate_ca1.py
src/human_hip/data_summary/: data_summary.ipynb
src/human_hip/fcm/: __init__.py  fcm.py
src/human_hip/functional_connectivity/: __init__.py  fcm_animator.ipynb
src/human_hip/histology/: __init__.py  histology.py
src/human_hip/latencies/: Latencies_Source_Code.ipynb  __init__.py  curation_plots.py  latency_pairs.py  vectors.py
src/human_hip/lfp/: __init__.py  spectrogram.py
src/human_hip/raw_data/: __init__.py  data_nrp.py  filter.py
src/human_hip/spike_data/: __init__.py  analysis.py  instant_firing_rate.py  latencies.py  plot_eigendecomposition.py  plot_footprint.py  plot_latencies.py  plot_matrices_connectivity.py  plot_raster.py  plot_summary.py  randomize.py  raster_plots.py  read_data.py  read_phy_files.py  summary_plots.py  summary_text.py  text_summary.py
(+844 files in other folders)
